# kibana-agent

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
src/kibana_agent/: cli.py  client.py  kql.py  server.py
tests/: test_cli.py  test_client.py  test_kql.py  test_mcp_server.py
