[project]
name = "kibana-agent"
version = "0.6.0"
description = "Read-only Kibana/Elasticsearch CLI optimised for AI agent usage"
readme = "README.md"
authors = [
    { name = "Yevhenii Hyzyla", email = "y.hyzyla@gmail.com" }
]
requires-python = ">=3.11"
license = "MIT"
keywords = ["kibana", "elasticsearch", "cli", "ai-agent", "logs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "requests>=2.31",
    "click>=8.1",
    "keyring>=25.0",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/hyzyla/kibana-agent"
Repository = "https://github.com/hyzyla/kibana-agent"
Issues = "https://github.com/hyzyla/kibana-agent/issues"

[project.scripts]
kibana-agent = "kibana_agent.cli:cli"

[dependency-groups]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
    "types-requests>=2.31",
    "pytest>=8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
